[tool.poetry]
name = "snark"
version = "0.1.0"
description = "Simply normalizing ARKs"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
